# aces-ansatz

./: CMakeLists.txt  README.md
src/core/: core.cpp  global_molecule_data.cpp  global_state.cpp  interupt.cpp  io_utils.cpp
src/include/: abort.h  core.h  flags.h  global_state.h  input_reader.h  io_utils.h  molecule_data.h  setup_handler.h
src/input/: asv.cpp  cartesian_manipulator.cpp  input_reader.cpp  keyword_handler.cpp  keyword_parser.cpp
src/main/: main.cpp
src/setup/: atomic_constants.cpp  setup_handler.cpp
test/: g.bas  hf2.zmat
